--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "see name",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --watch --progress --colors"
   },
   "author": "Louis Delbosc",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^5.8.3",
     "babel-loader": "^5.3.2",
+    "jquery": "^2.1.4",
     "node-libs-browser": "^0.5.2",
+    "peerjs": "^0.3.14",
     "react": "^0.13.3",
     "webpack": "^1.10.1"
   }
