--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^5.3.2",
     "jquery": "^2.1.4",
     "node-libs-browser": "^0.5.2",
+    "nuclear-js": "^1.1.0",
     "peerjs": "^0.3.14",
     "react": "^0.13.3",
     "webpack": "^1.10.1"
